tests/format/misc/errors/invalid-typescript-decorators/jsfmt.spec.js
runFormatTest(import.meta, ["typescript", "babel-ts"]);
